deployment/templates/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  namespace: mutatingwebhook
  name: ubuntu
  labels:
    app: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["/bin/sleep", "1d"]
    imagePullPolicy: IfNotPresent
