deployment/templates/testPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  namespace: testnamespace
  labels:
    name: testpod
spec:
  containers:
  - name: testpod
    image: nginx
