deployment/templates/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mutatingwebhook
  namespace: mutatingwebhook
spec:
  selector:
    app: mutatingwebhook
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
