deployment/templates/mutatingwebhook.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "mutatingWebHookShareProcessNamespace"
webhooks:
- name: "mutatingWebHookShareProcessNamespace"
  namespaceSelector:
    matchLabels:
      webhook: enabled
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
  clientConfig:
    service:
      namespace: "mutatingwebhook"
      name: "mutatingwebhook"
      path: "/webhook"
    caBundle: "cGxhY2Vob2xkZXIK"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
